# canopen_ros2_node

./: CMakeLists.txt  package.xml
Easy_CANopen/Src/: main.c
Easy_CANopen/Src/CAN_to_USB/: can_to_usb.c  can_to_usb.h
Easy_CANopen/Src/CANopen/Global_Enums/: Enum_Status_Codes.h
Easy_CANopen/Src/Hardware/: Hardware.h  Hardware_CAN.c
src/: canopen_node.cpp
